fix z-index of sticky-mobile toggle

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -275,7 +275,7 @@ svg {
   .sticky-mobile {
     position: sticky;
     top: 0;
-    z-index: 10;
+    z-index: 9;
   }
 }
 
